[gd_scene load_steps=22 format=3 uid="uid://d3fefgqtdhori"]

[ext_resource type="Script" uid="uid://b7vko2yn7j5nr" path="res://prefabs/UI/ui.gd" id="1_fw6kh"]
[ext_resource type="StyleBox" uid="uid://bb4tcpovrwga6" path="res://prefabs/UI/UI_Style.tres" id="2_juusu"]
[ext_resource type="Texture2D" uid="uid://nslqneqn3bg6" path="res://Assets/UI Components/CLEAN MENUS/clean ui_clean menu-09.png" id="2_u7etd"]
[ext_resource type="Texture2D" uid="uid://bl2au4g8etgt6" path="res://Assets/Icons/logs.png" id="4_1kgbg"]
[ext_resource type="Texture2D" uid="uid://djyqebfb20uxk" path="res://Assets/Icons/gold_ingots.png" id="4_wo3d2"]
[ext_resource type="Texture2D" uid="uid://cfimfdd00mnta" path="res://Assets/Icons/foods.png" id="5_vswyy"]
[ext_resource type="Texture2D" uid="uid://dm6k0qx3xr5lr" path="res://Assets/UI Components/KEY ICONS/clean ui_key icon-06.png" id="6_yi76j"]
[ext_resource type="Texture2D" uid="uid://dwa3awy4y0fwl" path="res://Assets/Icons/icons/axe.png" id="7_tethd"]
[ext_resource type="Texture2D" uid="uid://ctc8041is4op0" path="res://Assets/Icons/beer_mug.png" id="8_juusu"]
[ext_resource type="Texture2D" uid="uid://yj6fvjvdlrf6" path="res://Assets/Icons/icons/tent_leather.png" id="9_w4m0a"]
[ext_resource type="Texture2D" uid="uid://iifn3hmtdy8h" path="res://Assets/UI Components/UI ICONS/UI ICONS/white icons/ui icons_wht-12.png" id="12_juusu"]
[ext_resource type="Texture2D" uid="uid://ka2k4wvp2nxq" path="res://Assets/UI ICONS/UI ICONS/white icons/ui icons_wht-34.png" id="13_igoy7"]
[ext_resource type="Texture2D" uid="uid://de7re5y7gey2x" path="res://Assets/UI Components/UI ICONS/UI ICONS/white icons/ui icons_wht-07.png" id="13_w4m0a"]
[ext_resource type="Texture2D" uid="uid://bt3dxm0nam0er" path="res://Assets/UI Components/UI ICONS/UI ICONS/white icons/ui icons_wht-08.png" id="14_4ctr4"]
[ext_resource type="Texture2D" uid="uid://cyeqqbc3rs2ck" path="res://Assets/UI ICONS/UI ICONS/white icons/ui icons_wht-02.png" id="15_1tbnb"]
[ext_resource type="Texture2D" uid="uid://t6yynskgy3u8" path="res://Assets/Buildings/House1.png" id="15_igoy7"]
[ext_resource type="PackedScene" uid="uid://dy21qjlrln5qb" path="res://prefabs/UI/Events/EventModal.tscn" id="15_tethd"]
[ext_resource type="Texture2D" uid="uid://byauxsbwo5o2g" path="res://Assets/Buildings/millBase.png" id="16_1tbnb"]
[ext_resource type="Texture2D" uid="uid://dwyq4lhnyeasl" path="res://Assets/Buildings/GoldMine_Active.png" id="17_c6nnc"]
[ext_resource type="Texture2D" uid="uid://mkjljkpvj3gj" path="res://Assets/Buildings/FarmBase.png" id="18_pynmq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_igoy7"]
texture = ExtResource("2_u7etd")
texture_margin_left = 32.0
texture_margin_top = 8.0
texture_margin_right = 32.0
texture_margin_bottom = 8.0

[node name="Ui" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fw6kh")

[node name="TopPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 1272.0
offset_bottom = 72.0
theme_override_styles/panel = ExtResource("2_juusu")

[node name="MarginContainer" type="MarginContainer" parent="TopPanel"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="TopTab" type="HBoxContainer" parent="TopPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GoldCounter" type="MarginContainer" parent="TopPanel/MarginContainer/TopTab"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HBox" type="HBoxContainer" parent="TopPanel/MarginContainer/TopTab/GoldCounter"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="TextureRect" type="TextureRect" parent="TopPanel/MarginContainer/TopTab/GoldCounter/HBox"]
custom_minimum_size = Vector2(24, 32)
layout_mode = 2
texture = ExtResource("4_wo3d2")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="TopPanel/MarginContainer/TopTab/GoldCounter/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"

[node name="WoodCounter" type="MarginContainer" parent="TopPanel/MarginContainer/TopTab"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HBox" type="HBoxContainer" parent="TopPanel/MarginContainer/TopTab/WoodCounter"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="TextureRect" type="TextureRect" parent="TopPanel/MarginContainer/TopTab/WoodCounter/HBox"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("4_1kgbg")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="TopPanel/MarginContainer/TopTab/WoodCounter/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"

[node name="SupplyCounter" type="MarginContainer" parent="TopPanel/MarginContainer/TopTab"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HBox" type="HBoxContainer" parent="TopPanel/MarginContainer/TopTab/SupplyCounter"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="TextureRect" type="TextureRect" parent="TopPanel/MarginContainer/TopTab/SupplyCounter/HBox"]
custom_minimum_size = Vector2(24, 24)
layout_direction = 4
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_vswyy")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="TopPanel/MarginContainer/TopTab/SupplyCounter/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"

[node name="FaithCounter" type="MarginContainer" parent="TopPanel/MarginContainer/TopTab"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HBox" type="HBoxContainer" parent="TopPanel/MarginContainer/TopTab/FaithCounter"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="TextureRect" type="TextureRect" parent="TopPanel/MarginContainer/TopTab/FaithCounter/HBox"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("6_yi76j")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="TopPanel/MarginContainer/TopTab/FaithCounter/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"

[node name="TimerController" type="HBoxContainer" parent="TopPanel/MarginContainer/TopTab"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = 32
alignment = 1

[node name="Pause" type="TextureButton" parent="TopPanel/MarginContainer/TopTab/TimerController"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("12_juusu")
ignore_texture_size = true
stretch_mode = 5

[node name="Weekday" type="Label" parent="TopPanel/MarginContainer/TopTab/TimerController"]
layout_mode = 2
text = "Week 1, day 1"

[node name="Time" type="Label" parent="TopPanel/MarginContainer/TopTab/TimerController"]
layout_mode = 2
text = "00:00"

[node name="HBoxContainer" type="HBoxContainer" parent="TopPanel/MarginContainer/TopTab/TimerController"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="1x" type="TextureButton" parent="TopPanel/MarginContainer/TopTab/TimerController/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("13_w4m0a")
ignore_texture_size = true
stretch_mode = 5

[node name="2x" type="TextureButton" parent="TopPanel/MarginContainer/TopTab/TimerController/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("14_4ctr4")
ignore_texture_size = true
stretch_mode = 5

[node name="Buttons" type="HBoxContainer" parent="TopPanel/MarginContainer/TopTab"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 2

[node name="PopCounter" type="MarginContainer" parent="TopPanel/MarginContainer/TopTab/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HBox" type="HBoxContainer" parent="TopPanel/MarginContainer/TopTab/Buttons/PopCounter"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="TextureRect" type="TextureRect" parent="TopPanel/MarginContainer/TopTab/Buttons/PopCounter/HBox"]
custom_minimum_size = Vector2(24, 32)
layout_mode = 2
texture = ExtResource("7_tethd")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="TopPanel/MarginContainer/TopTab/Buttons/PopCounter/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"

[node name="HappinessCounter" type="MarginContainer" parent="TopPanel/MarginContainer/TopTab/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HBox" type="HBoxContainer" parent="TopPanel/MarginContainer/TopTab/Buttons/HappinessCounter"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="TextureRect" type="TextureRect" parent="TopPanel/MarginContainer/TopTab/Buttons/HappinessCounter/HBox"]
custom_minimum_size = Vector2(24, 32)
layout_mode = 2
texture = ExtResource("8_juusu")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="TopPanel/MarginContainer/TopTab/Buttons/HappinessCounter/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"

[node name="ReligionLvl" type="MarginContainer" parent="TopPanel/MarginContainer/TopTab/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HBox" type="HBoxContainer" parent="TopPanel/MarginContainer/TopTab/Buttons/ReligionLvl"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="TextureRect" type="TextureRect" parent="TopPanel/MarginContainer/TopTab/Buttons/ReligionLvl/HBox"]
custom_minimum_size = Vector2(24, 32)
layout_mode = 2
texture = ExtResource("9_w4m0a")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="TopPanel/MarginContainer/TopTab/Buttons/ReligionLvl/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"

[node name="SaveButton" type="TextureButton" parent="TopPanel/MarginContainer/TopTab/Buttons"]
visible = false
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("13_igoy7")
ignore_texture_size = true
stretch_mode = 5

[node name="Controller" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 8.0
offset_top = 590.0
offset_right = 340.0
offset_bottom = 712.0

[node name="BaseController" type="PanelContainer" parent="Controller"]
layout_mode = 2
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_igoy7")

[node name="MarginContainer" type="MarginContainer" parent="Controller/BaseController"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Controller/BaseController/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Controller/BaseController/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Controller/BaseController/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Constructions"

[node name="TextureButton" type="TextureButton" parent="Controller/BaseController/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(32, 16)
layout_mode = 2
texture_normal = ExtResource("15_1tbnb")
ignore_texture_size = true
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Controller/BaseController/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Grid" type="GridContainer" parent="Controller/BaseController/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/h_separation = 4
columns = 33

[node name="TextureButtonAlojamento" type="TextureButton" parent="Controller/BaseController/MarginContainer/VBoxContainer/HBoxContainer/Grid"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("15_igoy7")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButtonMadeireira" type="TextureButton" parent="Controller/BaseController/MarginContainer/VBoxContainer/HBoxContainer/Grid"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("16_1tbnb")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButtonMinas" type="TextureButton" parent="Controller/BaseController/MarginContainer/VBoxContainer/HBoxContainer/Grid"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("17_c6nnc")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureButtonFazenda" type="TextureButton" parent="Controller/BaseController/MarginContainer/VBoxContainer/HBoxContainer/Grid"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("18_pynmq")
ignore_texture_size = true
stretch_mode = 5

[node name="EventModal" parent="." instance=ExtResource("15_tethd")]
visible = false
layout_mode = 1

[connection signal="pressed" from="TopPanel/MarginContainer/TopTab/TimerController/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="TopPanel/MarginContainer/TopTab/TimerController/HBoxContainer/1x" to="." method="_on_1x_pressed"]
[connection signal="pressed" from="TopPanel/MarginContainer/TopTab/TimerController/HBoxContainer/2x" to="." method="_on_2x_pressed"]
[connection signal="pressed" from="TopPanel/MarginContainer/TopTab/Buttons/SaveButton" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Controller/BaseController/MarginContainer/VBoxContainer/HBoxContainer2/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Controller/BaseController/MarginContainer/VBoxContainer/HBoxContainer/Grid/TextureButtonAlojamento" to="." method="_on_texture_button_pressed_alojamento"]
[connection signal="pressed" from="Controller/BaseController/MarginContainer/VBoxContainer/HBoxContainer/Grid/TextureButtonMadeireira" to="." method="_on_texture_button_pressed_madeireira"]
[connection signal="pressed" from="Controller/BaseController/MarginContainer/VBoxContainer/HBoxContainer/Grid/TextureButtonMinas" to="." method="_on_texture_button_pressed_minas"]
[connection signal="pressed" from="Controller/BaseController/MarginContainer/VBoxContainer/HBoxContainer/Grid/TextureButtonFazenda" to="." method="_on_texture_button_pressed_fazenda"]
